--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,14 @@ body{
 	margin-top:0px;
 	margin-bottom: 20px;
 }
+.blog-shout-out{
+	font-size: 18px;
+}
+.blog-shout-out a{
+	color:#FC7753;
+	text-decoration: none;
+	font-weight: 600;
+}
 /*Experience Section*/
 .experience{
 	width: 100%;
