--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ li{
 }
 .connect-button{
 	display:inline-block;
-	width: calc(50% - 30px);
+	width: calc(33% - 20px);
 	background-color:#66D7D1;
 	text-align: center;
 	padding: 25px 0 25px 0;
@@ -221,11 +221,7 @@ li{
 .right{
 	margin-left: 30px;
 }
-.left:hover{
-	background-color: #FC7753;
-	color: #F4F3F0;
-}
-.right:hover{
+.connect-button:hover{
 	background-color: #FC7753;
 	color: #F4F3F0;
 }
@@ -377,6 +373,113 @@ li{
 }
 .right-blog{
 	margin-left:12px;
+}
+/*CALENDAR STYLES*/
+.calendar {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.calendar-graph text.wday,
+.calendar-graph text.month {
+    font-size: 10px;
+    fill: #aaa;
+}
+
+.contrib-legend {
+    text-align: right;
+    padding: 0 14px 10px 0;
+    display: inline-block;
+    float: right;
+}
+
+.contrib-legend .legend {
+    display: inline-block;
+    list-style: none;
+    margin: 0 5px;
+    position: relative;
+    bottom: -1px;
+    padding: 0;
+}
+
+.contrib-legend .legend li {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+}
+
+.text-small {
+    font-size: 12px;
+    color: #767676;
+}
+
+.calendar-graph {
+    padding: 5px 0 0;
+    height: 126px;
+    text-align: center;
+}
+
+.table-column{ 
+	display: none; 
+}
+
+.contrib-number {
+    font-weight: 300;
+    line-height: 1.3em;
+    font-size: 24px;
+    display: block;
+    color: #333;
+}
+
+.calendar img.spinner {
+    width: 70px;
+    margin-top: 50px;
+    min-height: 70px;
+}
+
+.monospace {
+    text-align: center;
+    color: #000;
+    font-family: monospace;
+}
+
+.monospace a {
+    color: #1D75AB;
+    text-decoration: none;
+}
+
+.contrib-footer {
+    font-size: 11px;
+    padding: 0 10px 12px;
+    text-align: left;
+    width: 100%;
+    box-sizing: border-box;
+    height: 26px;
+}
+
+.left.text-muted {
+    float: left;
+    margin-left: 9px;
+    color: #767676;
+}
+.left.text-muted a {
+    color: #4078c0;
+    text-decoration: none;
+}
+.left.text-muted a:hover,
+.monospace a:hover {
+    text-decoration: underline;
+}
+
+h2.f4.text-normal.mb-3 {
+    display: none;
+}
+
+.float-left.text-gray {
+    float: left;
+}
+#user-activity-overview{
+    display:none;
 }
 /*Media Queries*/
 @media screen and (max-width: 1000px) {
