--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body{
 	margin: 0;
 	padding: 0;
 }
+a{
+	text-decoration: none;
+	color:currentColor;
+}
 .section-title{
 	text-align: center;
 	padding: 40px 0 20px 0;
